--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,7 @@
 Package: MriCloudR
 Type: Package
 Title: R wrapper for MriCloud API
-Version: 0.9.3
-Date: 2016-07-11
+Version: 0.9.4
 Author: Marc Vaillant
 Maintainer: Brian Caffo <bcaffo@gmail.com>
 Description: Provides an R interface to the MriCloud API.
@@ -13,7 +12,8 @@ Depends:
 Imports:
     rvest,
     httr,
-    objectProperties
+    objectProperties,
+    objectSignals
 RoxygenNote: 6.1.1
 Collate: 
     DtiSegData.r
